# langteam

./: .gitignore  LICENSE  README.md  agent_system.py  main.py  models.py  multiagent_supervisor.py  pyproject.toml  supervisor.py  team_supervisor.py  tools.py
agents/: __init__.py  analysis_agent.py  base_agent.py  math_agent.py  research_agent.py  supervisor_agent.py  writing_agent.py
examples/: example_agents.py  main.py  multiagent_supervisor.py  tool_logging_demo.py  verbose_example.py
src/langgroup/: __init__.py  agent_system.py  models.py  team_supervisor.py
src/langgroup/agents/: __init__.py  base_agent.py  supervisor_agent.py
src/langteam/: __init__.py  agent_system.py  team_supervisor.py
src/langteam/agents/: base_agent.py  supervisor_agent.py
tests/: test_multiagent.py
